--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
                     <section id="tm-section-1">                        
                         <div class="tm-container text-xs-center tm-section-1-inner">
                             <img src="img/2OFUS14.jpg" alt="Logo" class="tm-logo">
-                            <h1 class="tm-site-name">I would like to say that I love you!
+                            <h1 class="tm-site-name">I would like to say thank you...
                                 <br>
-                                Truly you are my best enemy, best friend and best buddy!
+                                for being my best critic and my best ever friend! You are God's gift!
                                 <br>
-                                Praying to spend my lifetime with you.....
+                                Praying to spend my lifetime with you...I love you much!
                         </h1>
                             <!-- <p class="tm-intro-text">Best part of life is living the life </p>
                             <a href="#tm-section-2" class="tm-intro-link">Start</a>     -->
