--- a/index.html
+++ b/index.html
@@ -161,14 +161,14 @@
                                     <img src="img/2OFUS17.jpg" alt="Image" class="img-fluid tm-gallery-img">
                                 </a> 
                             </div>
-                            <!-- <div class="tm-gallery-img-container">
+                            <div class="tm-gallery-img-container">
                                 <a href="img/2OFUS13.jpg" class="tm-gallery-img-link">
-                                    <img src="img/2OFUS14.jpg" alt="Image" class="img-fluid tm-gallery-img">
-                                </a> -->
+                                    <img src="img/2OFUS16.jpg" alt="Image" class="img-fluid tm-gallery-img">
+                                </a>
                             </div>
                             <div class="tm-gallery-img-container">
                                 <!-- <a href="img/au03.jpg" class="tm-gallery-img-link"> -->
-                                    <img src="img/2OFUS16.jpg" alt="Image" class="img-fluid tm-gallery-img">
+                                    <img src="img/2OFUS19.jpg" alt="Image" class="img-fluid tm-gallery-img">
                                 </a>
                             </div> 
                             <div class="tm-gallery-img-container">
