--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                                 </a> 
                             </div>
                             <div class="tm-gallery-img-container">
-                                <a href="img/2OFUS13.jpg" class="tm-gallery-img-link">
+                                <!-- <a href="img/2OFUS13.jpg" class="tm-gallery-img-link"> -->
                                     <img src="img/2OFUS16.jpg" alt="Image" class="img-fluid tm-gallery-img">
                                 </a>
                             </div>
