--- a/index.html
+++ b/index.html
@@ -166,11 +166,11 @@
                                     <img src="img/2OFUS16.jpg" alt="Image" class="img-fluid tm-gallery-img">
                                 </a>
                             </div>
-                            <div class="tm-gallery-img-container">
+                            <!-- <div class="tm-gallery-img-container">
                                 <!-- <a href="img/au03.jpg" class="tm-gallery-img-link"> -->
-                                    <img src="img/2OFUS19.jpg" alt="Image" class="img-fluid tm-gallery-img">
+                                    <!-- <img src="img/2OFUS19.jpg" alt="Image" class="img-fluid tm-gallery-img">
                                 </a>
-                            </div> 
+                            </div>  --> 
                             <div class="tm-gallery-img-container">
                                 <!-- <a href="img/my4.jpg" class="tm-gallery-img-link"> -->
                                     <img src="img/2OFUS11.jpg" alt="Image" class="img-fluid tm-gallery-img">
