--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                                 </a>
                             </div>
                             <!-- <div class="tm-gallery-img-container">
-                                <!-- <a href="img/au03.jpg" class="tm-gallery-img-link"> -->
+                                <!- <a href="img/au03.jpg" class="tm-gallery-img-link"> -->
                                     <!-- <img src="img/2OFUS19.jpg" alt="Image" class="img-fluid tm-gallery-img">
                                 </a>
                             </div>  --> 
